Make sure the highlight bg touches on multiline

--- a/src/static/scss/components/_text-highlight.scss
+++ b/src/static/scss/components/_text-highlight.scss
@@ -1,5 +1,8 @@
 .text-highlight {
-  background-color: rgba(255, 221, 102, 0.5);
+  position: relative;
+
+  padding: .2em 0;
+
   color: $color-deep-gray;
 
   &.-active {
