--- a/src/static/scss/ambience/_colors.scss
+++ b/src/static/scss/ambience/_colors.scss
@@ -1,14 +1,16 @@
 $color-theme: #396;
-$color-link: #36c;
+$color-link: #36C;
 $color-whitesmoke: #F4F4F4;
 $color-brand: #2DA965;
 $color-deep-gray: #474747;
 $color-grayish: #D0D0D0;
 $color-gray: #949494;
 $color-red: #EB6767;
+$color-highlight: #FD6;
+$color-highlight-on-white: #FFEEB2;
 
 
 // Social colors
-$color-facebook: #3b5998;
+$color-facebook: #3B5998;
 $color-twitter: #00ACED;
 $color-whatsapp: #25D366;
