--- a/src/templates/components/opinion-modal.html
+++ b/src/templates/components/opinion-modal.html
@@ -16,27 +16,30 @@
 
       <header class="js-headerModal">
         <h2>Você concorda?</h2>
-        <div class="close js-closeModal"><img class="icon" src="{% static 'img/close.svg' %}"></div>
+        <div class="close-icon js-closeModal"><img class="icon" src="{% static 'img/close.svg' %}"></div>
       </header>
 
       <div class="highlight">
-        <span class="info-text js-userInfo">
-          <img class="js-userAvatar" src="{{suggestion.author.profile.avatar_url}}">
-          <h3>{{suggestion.author.get_full_name}} destacou o trecho:</h3>
-        </span>
-        
-        <p class="excerpt js-documentExcerpt">
-          {% highlight_suggestion suggestion %}
-        </p>
+        <div class="overflow">
+          <span class="info-text js-userInfo">
+            <img class="js-userAvatar" src="{{suggestion.author.profile.avatar_url}}">
+            <h3>{{suggestion.author.get_full_name}} destacou o trecho:</h3>
+          </span>
+          
+          <p class="excerpt js-documentExcerpt">
+            {% highlight_suggestion suggestion %}
+          </p>
+        </div>
       </div>
 
       <div class="opinion">
-        <span class="info-text">
-          <img src="{% static 'img/atention.svg' %}">
-          <h3>E deu a seguinte opinião nele:</h3>
-        </span>
-        
-        <p class="suggestion js-suggestion">{{suggestion.content}}</p>
+        <div class="overflow">
+          <span class="info-text">
+            <h3>E deu a seguinte opinião nele:</h3>
+          </span>
+          
+          <p class="suggestion js-suggestion">{{suggestion.content}}</p>
+        </div>
       </div>
 
       <footer class="actions">
