Change skip label string

--- a/src/templates/components/opinion-modal.html
+++ b/src/templates/components/opinion-modal.html
@@ -46,7 +46,7 @@
         <a href="#" class="disagree js-opinionButton" data-opinion="reject" data-text="Discordo">Discordo</a>
         <a href="#" class="indifferent js-opinionButton" data-opinion="neutral" data-text="Indiferente">Indiferente</a>
         <a href="#" class="agree js-opinionButton" data-opinion="approve" data-text="Concordo">Concordo</a>
-        <a href="#" class="skip js-nextOpinion" data-text="Próxima Opinião">Próxima Opinião</a>
+        <a href="#" class="skip js-nextOpinion" data-text="Pular Opinião">Pular Opinião</a>
       </footer>
     </article>
   {% endfor %}
