Change example image

--- a/src/static/scss/components/_start-header.scss
+++ b/src/static/scss/components/_start-header.scss
@@ -12,7 +12,11 @@
   }
 
   & > .hero {
+    box-sizing: border-box;
     width: 100%;
+    padding: 2rem;
+
+    background-color: rgba(#FFF, .5);
 
     @include bp-mediumonly {
       width: 50%;
