--- a/src/static/scss/base/_reusables.scss
+++ b/src/static/scss/base/_reusables.scss
@@ -1,30 +1,38 @@
-@mixin underline($offset: 0px, $width: 1px) {
+@mixin underline($offset: 0, $width: 1px) {
   background: linear-gradient(currentcolor, currentcolor);
-  background-size: $width $width;
   background-repeat: repeat-x;
   background-position: 100% calc(100% - #{$offset});
+  background-size: $width $width;
 }
 
 @mixin hidden-shadow {
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
-  transition: box-shadow 0.3s $swift-out;
+  transition: box-shadow .3s $swift-out;
+
+  box-shadow: 0 0 0 rgba(0, 0, 0, 0);
 }
 
 @mixin card-shadow {
-  box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.08);
-  transition: box-shadow 0.3s $swift-out;
+  transition: box-shadow .3s $swift-out;
+
+  box-shadow: 3px 3px 4px rgba(0, 0, 0, .08);
+}
+
+@mixin card-darkbg-shadow {
+  box-shadow: 4px 4px 6px 0 rgba($color-deep-gray, .65);
 }
 
 @mixin button-shadow {
-  box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.08);
+  box-shadow: 3px 3px 4px rgba(0, 0, 0, .08);
 }
 
 @mixin header-shadow {
-  box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.08);
-  transition: box-shadow 0.3s $swift-out;
+  transition: box-shadow .3s $swift-out;
+
+  box-shadow: 0 3px 4px rgba(0, 0, 0, .08);
 }
 
 @mixin footer-shadow {
-  box-shadow: 0px -3px 4px rgba(0, 0, 0, 0.08);
-  transition: box-shadow 0.3s $swift-out;
+  transition: box-shadow .3s $swift-out;
+
+  box-shadow: 0 -3px 4px rgba(0, 0, 0, .08);
 }
