--- a/src/static/scss/base/_reusables.scss
+++ b/src/static/scss/base/_reusables.scss
@@ -18,11 +18,11 @@
 }
 
 @mixin card-darkbg-shadow {
-  box-shadow: 4px 4px 6px 0 rgba($color-deep-gray, .65);
+  box-shadow: 2px 2px 3px 2px rgba(0, 0, 0, 0.2)
 }
 
 @mixin button-shadow {
-  box-shadow: 3px 3px 4px rgba(0, 0, 0, .08);
+  box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2)
 }
 
 @mixin header-shadow {
