Add initial alertMessage

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -47,6 +47,7 @@
 @import 'components/info-bar';
 @import 'components/info-button';
 @import 'components/start-header';
+@import 'components/alert-message';
 
 // Vendor
 @import 'vendor/tooltip';
