--- a/src/static/scss/components/_input-text.scss
+++ b/src/static/scss/components/_input-text.scss
@@ -33,7 +33,7 @@
 
     padding-bottom: .1rem;
 
-    transition: all .2s cubic-bezier(.4, .0, .2, 1);
+    transition: all .2s $swift-out;
     transform: translateY(1rem);
     pointer-events: none;
 
