Add progress js behavior

--- a/src/templates/components/alert-message.html
+++ b/src/templates/components/alert-message.html
@@ -11,5 +11,5 @@
       Desfazer
     </span>
   </div>
-  <div class="progress js-progress" style="transform: scaleX(1);"></div>
+  <div class="progress js-progress"></div>
 </div>
