--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -36,6 +36,7 @@
 @import 'components/input-select';
 @import 'components/autocomplete-list';
 @import 'components/theme-autocomplete';
+@import 'components/submitted-opinion';
 @import 'components/document-form';
 @import 'components/theme-tag';
 @import 'components/section-group';
