Remove undo elements by default
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/templates/components/alert-message.html
+++ b/src/templates/components/alert-message.html
@@ -3,7 +3,7 @@
     <span class="icon">😃</span>
     <span class="text js-message"></span>
   </div>
-  <div class="actions js-actions">
+  <div class="actions _hide js-actions">
     <span class="action -undo">
       <i class="icon">
         <img class="undo" src="/static/img/undo.svg">
