--- a/src/templates/components/opinion-modal.html
+++ b/src/templates/components/opinion-modal.html
@@ -54,9 +54,9 @@
   {% endfor %}
 
   <div class="submitted-opinion">
-    <span class="submission" data-opinion"reject">Discordo</span>
-    <span class="submission" data-opinion"neutral">Indiferente</span>
-    <span class="submission" data-opinion"approve">Concordo</span>
-    <span class="submission" data-opinion"skip">Pular Opinião</span>
+    <span class="submission js-submissionCue" data-opinion="reject">Discordo</span>
+    <span class="submission js-submissionCue" data-opinion="neutral">Indiferente</span>
+    <span class="submission js-submissionCue" data-opinion="approve">Concordo</span>
+    <span class="submission js-submissionCue" data-opinion="skip">Pular Opinião</span>
   </div>
 {% endblock content %}
