--- a/src/static/scss/base/_unclassed.scss
+++ b/src/static/scss/base/_unclassed.scss
@@ -33,6 +33,25 @@ body {
 body {
   background-color: $color-whitesmoke;
 
+  &::before {
+    position: fixed;
+    z-index: 9;
+    top: 0;
+    left: 0;
+
+    display: block;
+
+    width: 100%;
+    height: 100%;
+
+    content: '';
+    transition: opacity .3s ease;
+    pointer-events: none;
+
+    opacity: 0;
+    background-color: #000;
+  }
+
   &.-home {
     & .nav-bar {
       opacity: 0;
@@ -59,23 +78,12 @@ body {
     overflow: hidden;
 
     &::before {
-      position: fixed;
-      z-index: 9;
-      top: 0;
-      left: 0;
-
-      display: block;
-
-      width: 100%;
-      height: 100%;
-
-      content: '';
+      pointer-events: auto;
 
       opacity: .6;
-      background-color: #000;
     }
 
-    > main {
+     > main {
       filter: blur(2px);
     }
   }
